[package]
name = "endianrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2"

[features]
i128 = []
u128 = []
int128 = ["i128", "u128"]
isize = []
usize = []
intsize = ["isize", "usize"]
all = ["intsize", "int128"]